--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
                             <label>Groupe</label>
                             <select name="groupe" id="groupe" class="inputStyle">
                                 <option value="none" disabled>Sélectionner un groupe</option>
-                                <option value=""></option>
                                 <option value="Famille">Famille</option>
                                 <option value="Ami(e)">Amis</option>
                             </select>
@@ -55,9 +54,9 @@
                 </div>
             </div>
             <div class="element">
-                <did id="eteteListContact">
+                <div id="eteteListContact">
                     <h2>Liste de contact</h2>
-                </did>
+                </div>
                 <div id="corpListContact">              
 
                     
