Refector : attibution des noms appropriés aux variables et fonctions

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <div class="champ">
                             <label>Groupe</label>
                             <select name="groupe" id="groupe" class="inputStyle">
-                                <option value="none" disabled>Sélectionner un groupe</option>
+                                <option value="none" selected disabled>Sélectionner un groupe</option>
                                 <option value="Famille">Famille</option>
                                 <option value="Ami(e)">Amis</option>
                             </select>
@@ -48,7 +48,7 @@
                         <div class="boutons">
                          
                             <button type="submit" id="creerContact">Créer</button>
-                            <button type="reset">Réinit.</button>
+                            <button type="reset">Réinitialiser</button>
                         </div>
                     </form>
                 </div>
